# Data_Collection

./: README.md  pyproject.toml
docs/: scam_ai_collection.md
sample_data/: startup_profile.json
scripts/: collect_features.py
src/data_collection/: config.py  http.py  pipeline.py  utils.py
src/data_collection/features/: base.py  external.py  founder.py  prediction.py
src/data_collection/sources/: base.py  open_data.py
tests/: test_pipeline.py
