[project]
name = "startup_feature_collector"
version = "0.1.0"
description = "Open-source pipeline for collecting AI startup features from multiple data sources."
authors = [{name = "OpenAI Assistant"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "typer[all]>=0.9",
    "tqdm>=4.65",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0"
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
